syntax = "proto3";
package rafay.dev.types.user.v3;

import "proto/types/commonpb/v3/common.proto";
import "proto/types/userpb/v3/role.proto";
import "proto/types/userpb/v3/rolepermission.proto";
import "proto/types/userpb/v3/group.proto";
import "proto/types/systempb/v3/project.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
// import "google/api/field_behavior.proto";

message User {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema : {
      title : "User"
      description : "User"
      required : [ "apiVersion", "kind", "metadata", "spec" ]
    }
  };

  string apiVersion = 1; // default : "usermgmt.k8smgmt.io/v3"
  string kind = 2;       // default : "User"
  rafay.dev.types.common.v3.Metadata metadata = 3;
  UserSpec spec = 4;
  rafay.dev.types.common.v3.Status status = 5;
}

message UserSpec {
  string firstName = 1;
  string lastName = 2;
  string username = 3;
  string phone = 4;
  string password = 5;
  string totpRequired = 6;
  string totpSecret = 7;
  repeated rafay.dev.types.user.v3.Role roles = 8;
  repeated rafay.dev.types.user.v3.Group group = 9;
  repeated rafay.dev.types.system.v3.Project project = 10;
  bool emailVerified = 11;
  bool phoneVerified = 12;
  bool totpVerified = 13;
}

message UserList {
  string apiVersion = 1;
  string kind = 2;
  rafay.dev.types.common.v3.ListMetadata metadata = 3;
  repeated User items = 4;
}
